Inserindo imagens e incluindo listas ordenadas!

--- a/index.html
+++ b/index.html
@@ -35,5 +35,19 @@
     <p>E o impossível vai tornar-se possível</p>
     <p>E ai um grande amor todos vão conhecer e eternizar.</p>
 
+    <div class="conteudo">
+        <div class="esquerda">
+            <img src="https://imageproxy.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/e7bc456f737975ececd78921de2935aea1ee888a1711cae69518d58ce2193f28_1.jpg" alt="">
+        </div>
+        <div class="direita">
+            <ol>
+                <li>A criatura denominada "Negro Pensante" é um ser:</li>
+                <li>Absoluto</li>
+                <li>Unipresente</li>
+                <li>Uniciente</li>
+                <li>E Unipotente</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
